--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,3 +6,13 @@ services:
       - ./:/app
     ports:
       - "8000:8000"
+  mongo:
+    image: mongo
+    ports:
+      - "27017:27017"
+    volumes_from:
+      - mongodata
+  mongodata:
+    image: tianon/true
+    volumes:
+      - /data/db
