--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "~4.14.1",
     "morgan": "~1.7.0",
     "node-sass-middleware": "0.9.8",
-    "serve-favicon": "~2.3.2"
+    "serve-favicon": "~2.3.2",
+    "mongoose": "~4.8.4"
   }
 }
