--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "test": "node ./node_modules/mocha/mocha.js -R spec ./test/spec.js"
+    "test": "mocha -R spec tests/spec.js"
   },
   "dependencies": {
     "body-parser": "~1.16.0",
