--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
+    "test1": "node ./app.js",
     "test": "mocha -R spec tests/spec.js"
   },
   "dependencies": {
@@ -12,6 +13,9 @@
     "debug": "~2.6.0",
     "ejs": "~2.5.5",
     "express": "~4.14.1",
+    "express-session": "^1.15.1",
+    "login-mongo": "^1.2.0",
+    "mongoose": "^4.8.5",
     "morgan": "~1.7.0",
     "node-sass-middleware": "0.9.8",
     "serve-favicon": "~2.3.2"
