--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "mongoose": "^4.8.5",
     "morgan": "~1.7.0",
     "node-sass-middleware": "0.9.8",
-    "serve-favicon": "~2.3.2"
+    "serve-favicon": "~2.3.2",
+    "uniqid": "^4.1.1"
   },
   "devDependencies": {
     "mocha": "^3.2.0",
