--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "login-mongo": "^1.2.0",
     "mongoose": "^4.8.5",
     "morgan": "~1.7.0",
+    "multer": "^1.3.0",
     "node-sass-middleware": "0.9.8",
     "serve-favicon": "~2.3.2",
     "sweetalert": "^1.1.3",
