--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "push.js": "0.0.12",
     "serve-favicon": "~2.3.2",
     "sweetalert": "^1.1.3",
+    "twilio": "^2.11.1",
     "uniqid": "^4.1.1"
   },
   "devDependencies": {
