--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^4.8.5",
     "morgan": "~1.7.0",
     "multer": "^1.3.0",
+    "nexmo": "^1.2.0",
     "node-sass-middleware": "0.9.8",
     "push.js": "0.0.12",
     "serve-favicon": "~2.3.2",
