--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "morgan": "~1.7.0",
     "multer": "^1.3.0",
     "node-sass-middleware": "0.9.8",
+    "passport": "^0.3.2",
     "push.js": "0.0.12",
     "serve-favicon": "~2.3.2",
     "sweetalert": "^1.1.3",
