Passport added partially supported

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "multer": "^1.3.0",
     "node-sass-middleware": "0.9.8",
     "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "push.js": "0.0.12",
     "serve-favicon": "~2.3.2",
     "sweetalert": "^1.1.3",
