--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "aws-sdk": "^2.27.0",
     "bcrypt": "^1.0.2",
     "body-parser": "~1.16.0",
+    "connect-ensure-login": "^0.1.1",
+    "connect-redis": "^3.2.0",
     "cookie-parser": "~1.4.3",
     "crypto": "^0.0.3",
     "csv": "^1.1.1",
@@ -28,6 +30,7 @@
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "push.js": "0.0.12",
+    "redis": "^2.7.1",
     "serve-favicon": "~2.3.2",
     "sweetalert": "^1.1.3",
     "twilio": "^2.11.1",
