--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "serve-favicon": "~2.3.2",
     "sweetalert": "^1.1.3",
     "twilio": "^2.11.1",
+    "unescape": "^0.2.0",
     "uniqid": "^4.1.1"
   },
   "devDependencies": {
