--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,8 @@ jspm_packages
 .elasticbeanstalk/*
 !.elasticbeanstalk/*.cfg.yml
 !.elasticbeanstalk/*.global.yml
+
+
+# Public
+public/img/users/*
+public/img/workshops/*
