--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "login-mongo": "^1.2.0",
     "moment": "^2.18.1",
     "mongoose": "^4.8.5",
-    "morgan": "~1.7.0",
+    "morgan": ">=1.9.1",
     "multer": "^1.3.0",
     "node-sass-middleware": "0.9.8",
     "passport": "^0.3.2",
